# Freax

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  build.sh  disk.tar  kernel.elf  kernel.map  linker.ld  run.sh  shell.elf  shell.map  target.json  toolchain.cmake
.cargo/: config.toml
boot/: limine.cfg
drivers/: framebuffer.c  keyboard.c  shell.c  teletype.c  vga.c
include/: framebuffer.h  keyboard.h  shell.h  teletype.h  vga.h
kernel/: main.c  main.cc
src/: interrupts.rs  lib.rs  main.rs  sbi.rs  vga_buffer.rs
src/include/: idt.h  isr.h  vga.h
src/kernel/: idt.S  idt.c  isr.S  isr.c  kernel.c  vga.c
tests/: basic_boot.rs  should_panic.rs
